src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwP0.25-dhF500-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 291 × 500, bounds: 1239 × 688, states: []

post-map configures:
size: 291 × 500, bounds: 1239 × 688, states: [Activated]
